Update to current, build with Qt 5.x

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libqtxdg-20140508.tar.xz": 333e5f2ddfec57aba413a2b19d9905d322f2be5c
+  libqtxdg-20140730.tar.xz: 47f9c05afeb8b4c71d4097b1f1892e4c7d4f4c83
