--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libqtxdg-20141017.tar.xz: b28c8272cbe01aff5961480d4656a459ac79dc6f
+  libqtxdg-1.0.0-20150205.tar.xz: c9d66dede36affeed70b56cd8a2ccbe75e3257f2
