--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libqtxdg-1.0.0-20150205.tar.xz: c9d66dede36affeed70b56cd8a2ccbe75e3257f2
+  libqtxdg-1.1.0.tar.xz: 6cfd2b557130f48770b5a11396c1fee7b967c55c
