--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libqtxdg-1.2.0.tar.xz: c2b3fa7128c1fd56f7bec2b53ebc8e04a5ecb0a6
+  1.3.0.tar.gz: f2f563e496e2ff634deadaafee38349fd247b444
