--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  1.3.0.tar.gz: f2f563e496e2ff634deadaafee38349fd247b444
+  libqtxdg-1.3.0.tar.xz: cd5ad7881099ceba52df893005dc85153980ef45
