--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  libqtxdg-2.0.0.tar.xz: 1b9bba190a13e50a477a4b0692c6884964230523
+  3.1.0.tar.gz: 1194d0cbc9553b7fe7b48b7bbad381da3a4c01c6
